[project]
name = "zenbase"
version = "0.1.0"
description = "LLMs made Zen"
authors = [{ name = "Cyrus Nouroozi", email = "cyrus@zenbase.ai" }]
dependencies = [
    "asyncer>=0.0.7",
    "sorcery>=0.2.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.1",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.6",
    "langsmith>=0.1.65",
    "mypy>=1.10.0",
    "pyright>=1.1.365",
    "datasets>=2.19.1",
    "ipython>=8.24.0",
    "ipdb>=0.13.13",
    "openai>=1.30.5",
    "syrupy>=4.6.1",
    "pytest-recording>=0.13.1",
    "python-dotenv>=1.0.1",
    "vcrpy>=6.0.1",
    "arize-phoenix[evals]>=4.2.4",
    "nest-asyncio>=1.6.0",
    "langchain-openai>=0.1.8",
    "langchain-core>=0.2.3",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/zenbase"]
